apps/doplace/frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: doplace
  labels:
    app: frontend
spec:
  type: ClusterIP
  ports:
    - port: 8001
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: doplace
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: frontend
          image: ghcr.io/do-2k25-28/do-place-frontend:v0.0.1-beta.8 # {"$imagepolicy": "flux-system:frontend"}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 200m
